--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,8 +40,8 @@ dependencies {
     implementation libs.androidx.core.ktx
     implementation libs.androidx.appcompat
     implementation libs.material
-    implementation libs.androidx.activity // Esta línea es la actual, cámbiala o agrega la línea siguiente:
-    implementation 'androidx.activity:activity-ktx:1.3.0' // Añade esta línea para asegurar que tienes las extensiones ktx
+    implementation libs.androidx.activity
+    implementation 'androidx.activity:activity-ktx:1.3.0'
 
     implementation libs.androidx.constraintlayout
     testImplementation libs.junit
